# Vector_Graphics_On_Discrete_Surfaces

./: CMakeLists.txt  README.md  curve_non_convex_circles.ply  curve_non_convex_geodesics.ply  curve_non_euclidean_circle.ply  geodesic_on_sphere.ply  geodesics_on_torus.ply
apps/: CMakeLists.txt
apps/drawings/: CMakeLists.txt  app.cpp  app.h  drawing_circle.cpp  drawing_circle.h  drawing_functions.cpp  drawing_functions.h  drawing_polygon.cpp  drawing_polygon.h  drawing_window.cpp  drawing_window.h  geometry.cpp  geometry.h  imgui_extension.cpp  imgui_extension.h  logging.h  main.cpp  scene_exporter.h  splineio.cpp  splineio.h  straightedge_and_compass_constructions.cpp  straightedge_and_compass_constructions.h  strip.h  struct.h
libs/: CMakeLists.txt
libs/VTP/: geodesic_algorithm_exact.h
libs/realtime/: window.cpp
libs/yocto/: yocto_mesh.cpp  yocto_mesh.h  yocto_modelio.cpp  yocto_modelio.h  yocto_shape.cpp  yocto_shape.h
libs/yocto_gui/: yocto_imgui.cpp  yocto_imgui.h  yocto_opengl.cpp
scripts/: build.py
shaders/: polyline-envlight.frag  polyline.frag  sphere-envlight.frag  sphere.frag
